# AQM-utils

./: .gitignore  CMakeLists.txt  README.md
.github/: CODEOWNERS  pull_request_template.md
gefs2clbcs_para/: setup_wcoss_dell_p3.sh
lib/lib.analog/: analog_ensemble.f90  short_training_period.f90
lib/lib.bias/: read_gridded_hourly.f90  read_gridded_vars.f90
lib/lib.f90/: infill.f90
modulefiles/: build_cheyenne.intel.lua  build_hera.intel.lua  build_hopper.gnu.lua  build_orion.intel.lua  build_wcoss2.intel.lua  hera.intel  orion.intel  wcoss2.intel
parm/: postxconfig-NT-fv3lam_cmaq.txt
parm/bias_correction/: config.interp.ozone.7-vars_793.00z  config.interp.ozone.7-vars_793.06z  config.interp.ozone.7-vars_793.12z  config.interp.ozone.7-vars_793.18z  config.interp.pm2.5.5-vars_793.00z  config.interp.pm2.5.5-vars_793.06z  config.interp.pm2.5.5-vars_793.12z  config.interp.pm2.5.5-vars_793.18z  config.ozone.bias_corr_793.00z  config.ozone.bias_corr_793.06z  config.ozone.bias_corr_793.12z  config.ozone.bias_corr_793.18z  config.pm2.5.bias_corr_793.00z  config.pm2.5.bias_corr_793.06z  config.pm2.5.bias_corr_793.12z  config.pm2.5.bias_corr_793.18z  setup.wcoss2.ifort.parallel.opt-3  setup.wcoss2.ifort.serial.opt-zero  sites.valid.ozone.20220724.12z.list  sites.valid.ozone.20240610.12z.list  sites.valid.pm25.20220724.12z.list  sites.valid.pm25.20240610.12z.list
parm/nexus_modulefiles/: cheyenne.intel.lua  hera.intel.lua  hopper.gnu.lua  wcoss2.intel.lua
parm/wmo/: grib2_aqm_1hpm25.t06z.198  grib2_aqm_1hpm25.t06z.227  grib2_aqm_1hpm25.t12z.227  grib2_aqm_ave_1hr_o3-awpozcon.t06z.227  grib2_aqm_ave_1hr_o3-awpozcon.t12z.227  grib2_aqm_ave_1hr_o3_bc-awpozcon.t06z.227  grib2_aqm_ave_1hr_o3_bc-awpozcon.t12z.227
parm/wmo_header/: grib2_aqm_1hpm25.t06z.196  grib2_aqm_1hpm25.t12z.196  grib2_aqm_1hpm25.t12z.198
python_utils/: RAVE_remake.allspecies.aqmna13km.g793.py  add_aqm_ics.py  append-chem-lbc.py  intpl_ESMPy.QC.allspecies.py  intpl_ESMPy_QC_allspecies.py  stack-pt-merge-wcoss2.py  stack-pt-merge.py
sorc/: CMakeLists.txt
sorc/O3-PM25-stat/: .Makefile.swp  .go_compile.swp  CMakeLists.txt
sorc/O3-PM25-stat.fd/: Makefile  O3-PM25-stat.f90  go_compile
sorc/POST_UPP/: Makefile  O3-stat  O3-stat.f90  PM25-stat  cycledate  go_compile
sorc/aqm_airnow_converter.fd/: CMakeLists.txt  build_source.sh  convert_airnow_csv  download.airnow.csv.job  makefile  setup.wcoss2.ifort.convert
sorc/aqm_bias_correct.fd/: .CMakeLists.txt.swp  CMakeLists.txt  aqm_bias_correct  aqm_bias_correct.f90  makefile  qc_single_site.f90  qc_site_pm25.f90  read_blocking_list.f90  read_config_file_main.f90  read_interp_forecasts.f90  read_obs_qc.f90  read_obs_series.f90  site_blocking.f90
sorc/aqm_bias_interpolate.fd/: CMakeLists.txt  aqm_bias_interpolate  aqm_bias_interpolate.f90  makefile  read_config_file_interp.f90
sorc/aqm_post_bias_cor_grib2.fd/: CMakeLists.txt  Makefile  aqm_post_bias_cor_grib2.f90
sorc/aqm_post_bias_cor_grib2_793.fd/: CMakeLists.txt  aqm_post_bias_cor_grib2_793.f90
sorc/aqm_post_grib2.fd/: CMakeLists.txt  Makefile  aqm_post_grib2.f90
sorc/aqm_post_grib2_793.fd/: CMakeLists.txt  aqm_post_grib2_793.f90
sorc/aqm_post_maxi_bias_cor_grib2.fd/: CMakeLists.txt  Makefile  aqm_post_maxi_bias_cor_grib2.f90
sorc/aqm_post_maxi_bias_cor_grib2_793.fd/: CMakeLists.txt
sorc/aqm_post_maxi_grib2.fd/: CMakeLists.txt  Makefile  aqm_post_maxi_grib2.f90  rcmaq_post_maxi_grib2.f90
sorc/aqm_post_maxi_grib2_793.fd/: CMakeLists.txt  rcmaq_post_maxi_grib2.f90
sorc/convert_airnow_csv.fd/: CMakeLists.txt  cmd1.test  convert.airnow.job  convert.airnow.sh  convert_airnow_csv.hh  download.airnow.csv.csh  setup.hera.ifort.convert  setup.mac.gfortran
sorc/decomp-pt-mpi/: decomp-ptemis-mpi.f90
sorc/decomp-pt-mpi.fd/: CMakeLists.txt
sorc/decomp-pt-mpi/tests/: test-hera.ksh  test-wcoss2.ksh
sorc/gefs2clbcs_para.fd/: gefs2lbc_para.f90
sorc/gefs2clbcs_para/tests/: run-hera.ksh
sorc/gefs2lbcs_para.fd/: CMakeLists.txt  gefs2lbc_para.f90
sorc/gefs2lbcs_para.fd/tests/: run-hera-rrfs-dust.ksh
src/: CMakeLists.txt
src/POST_UPP/: Makefile  Makefile2  PM25-stat.f90  UPP-PM25-O3-subset_stat-day123_cycles.ksh  UPP-PM25-O3-subset_stat.ksh_4_cycles  go_compile
src/gefs2clbcs_para/: CMakeLists.txt  Makefile
src/gefs2clbcs_para/modulefiles/: setup_hera.sh
upp_post_stat/: PM25-O3-stat.f90  UPP-PM25-O3-subset_stat.ksh  compile  compile-new
versions/: build.ver.wcoss2
