# This is the cmake build file for the sorc directory in AQM-utils

option(GEFS2LBCS "Enable building gefs2lbcs.fd" ON)
option(AQM_POST_GRIB2 "Enable building aqm_post_grib2.fd" ON)
option(AQM_POST_MAXI_GRIB2 "Enable building aqm_post_maxi_grib2.fd" ON)
option(AQM_POST_BIAS_COR_GRIB2 "Enable building aqm_post_bias_cor_grib2.fd" ON)
option(AQM_POST_MAXI_BIAS_COR_GRIB2 "Enable building aqm_post_maxi_bias_cor_grib2.fd" ON)
option(AQM_BIAS_CORRECT "Enable building aqm_bias_correct.fd" ON)
option(AQM_BIAS_INTERPOLATE "Enable building aqm_bias_interpolate.fd" ON)
option(CONVERT_AIRNOW_CSV "Enable building convert_airnow_csv.fd" ON)

if(GEFS2LBCS)
  add_subdirectory(gefs2lbcs_para.fd)
endif()

if (BUILD_POST_STAT)
  if(AQM_POST_GRIB2)
    add_subdirectory(aqm_post_grib2.fd)
  endif()
  if(AQM_POST_MAXI_GRIB2)
    add_subdirectory(aqm_post_maxi_grib2.fd)
  endif()
  if(AQM_POST_BIAS_COR_GRIB2)
    add_subdirectory(aqm_post_bias_cor_grib2.fd)
  endif()
  if(AQM_POST_MAXI_BIAS_COR_GRIB2)
    add_subdirectory(aqm_post_maxi_bias_cor_grib2.fd)
  endif()
  if(AQM_BIAS_CORRECT)
    add_subdirectory(aqm_bias_correct.fd)
  endif()
  if(AQM_BIAS_INTERPOLATE)
    add_subdirectory(aqm_bias_interpolate.fd)
  endif()
  if(CONVERT_AIRNOW_CSV)
    add_subdirectory(convert_airnow_csv.fd)
  endif()
endif()
